--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.itheima</groupId>
     <artifactId>reggie_take_out</artifactId>
@@ -82,7 +82,7 @@
             <version>1.1.23</version>
         </dependency>
     </dependencies>
-
+的
     <build>
         <plugins>
             <plugin>
