使用Redis缓存验证码和菜品数据

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: reggie_take_out
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
