--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,6 @@ server:
   port: 8080
 spring:
   application:
-    #应用的名称，可选
     name: reggie_take_out
   shardingsphere:
     datasource:
@@ -39,10 +38,12 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+    #password:
     database: 0
   cache:
     redis:
-      time-to-live: 1800000 #设置缓存数据的过期时间
+      time-to-live: 1800000
+
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
@@ -51,5 +52,6 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
+
 reggie:
   path: E:\img\
